--- a/templates/web/base/google_analitics.html
+++ b/templates/web/base/google_analitics.html
@@ -8,7 +8,7 @@
         ga('create', 'UA-107233875-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script defer src='https://www.google-analytics.com/analytics.js'></script>
 {% else %}
     <script>
         window.ga = window.ga || function () {
@@ -18,6 +18,6 @@
         ga('create', 'UA-85067049-1', 'auto');
         ga('send', 'pageview');
     </script>
-    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <script defer src='https://www.google-analytics.com/analytics.js'></script>
 {% endif %}
 <!-- End Google Analytics -->
