--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -66,8 +66,8 @@
     {% include 'web/base/footer.html' %}
 {% endblock %}
 
-<script defer type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
-<script async type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
 <script>
     function preventPassiveListener(ev) {
         //ev.preventDefault();
