--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -67,7 +67,7 @@
 {% endblock %}
 
 <script type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
+<script async type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
 <script>
     function preventPassiveListener(ev) {
         //ev.preventDefault();
