--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -77,6 +77,7 @@
         giftofspeed.src = script_file;
         giftofspeed.defer = defer;
         giftofspeed.async = async;
+        giftofspeed.rel = "preconnect";
         var godefer = document.getElementsByTagName('script')[0];
         if (callback) {
             godefer.addEventListener('load', function (e) {
