--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -252,12 +252,12 @@
             new WOW().init();
         });
         defer_script_load("{% static 'web/js/popper.min.js' %}", true, false, null);
-        defer_script_load("{% static 'web/js/bootstrap.min.js' %}", true, false, null);
+        defer_script_load("{% static 'web/js/bootstrap.min.js' %}", false, false, null);
         defer_css_load("{% static 'web/css/font-awesome.min.css' %}");
         defer_css_load("{% static 'web/css/bootstrap.min.css' %}");
         defer_css_load("{% static 'web/css/style.min.css' %}?version={{ general_configuracion.version_css_cache }}hola");
         defer_script_load("https://maps.googleapis.com/maps/api/js?key=AIzaSyDnHDS9_MmBdyoGZgKYTkqb2C5ii6lvFaU&callback=initMap", true, false);
-        defer_script_load("https://www.google.com/recaptcha/api.js", true, false, null);
+        defer_script_load("https://www.google.com/recaptcha/api.js", false, false, null);
 
         {% block onLoadScript %}
 
