--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -1,5 +1,4 @@
 @import "OdecopackIcons.styl"
-
 $odecopack-color_1 = #ed6b00
 $odecopack-color_2 = #211915
 $odecopack-color_3 = white
@@ -7,6 +6,7 @@ $odecopack-color_4 = #5B5B5F
 $odecopack-color_5 = #ECEDEF
 
 @font-face
+  font-display: auto;
   font-family: 'FontOdecopack'
   src: url('../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.eot') format('embedded-opentype'), url('../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.woff2') format('woff2'), url('../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.woff') format('woff'), url('../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.ttf') format('truetype'), url('../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.svg') format('svg');
   font-weight normal
