--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -5,6 +5,7 @@
 <html lang="{{ LANGUAGE_CODE }}" class="{% block html_class %}{% endblock %}">
 
 <head>
+    <script defer type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -51,8 +52,6 @@
 {% block footer %}
     {% include 'web/base/footer.html' %}
 {% endblock %}
-
-<script type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
 <script>
     function preventPassiveListener(ev) {
         //ev.preventDefault();
@@ -118,6 +117,19 @@
         return supportsPassive
     }
 
+    function initMap() {
+        var uluru = {lat: 3.464009, lng: -76.510884};
+        var map = new google.maps.Map(document.getElementById('map-container'), {
+            zoom: 15,
+            center: uluru
+        });
+        var marker = new google.maps.Marker({
+            position: uluru,
+            map: map
+        });
+    }
+
+
     function inicial() {
         defer_css_load("{% static 'web/sass/mdb.min.css' %}");
         defer_script_load("{% static 'web/js/mdb.min.js' %}", false, false, function () {
@@ -136,7 +148,7 @@
             ga.l = +new Date;
             ga('create', 'UA-107233875-1', 'auto');
             ga('send', 'pageview');
-            defer_script_load("{% static "https://www.google-analytics.com/analytics.js" %}", true, false, null);
+            defer_script_load("https://www.google-analytics.com/analytics.js", true, false, null);
         {% endif %}
 
         $(function () {
@@ -245,7 +257,7 @@
                 }
             }
             var sourceDefer = document.getElementsByTagName('script');
-            for (var i = 0; i < imgDefer.length; i++) {
+            for (var i = 0; i < sourceDefer.length; i++) {
                 if (sourceDefer[i].getAttribute('data-srcset')) {
                     sourceDefer[i].setAttribute('src', sourceDefer[i].getAttribute('data-srcset'));
                 }
@@ -254,6 +266,7 @@
 
         defer_script_load("https://maps.googleapis.com/maps/api/js?key=AIzaSyDnHDS9_MmBdyoGZgKYTkqb2C5ii6lvFaU&callback=initMap", true, false);
         defer_script_load("https://www.google.com/recaptcha/api.js", false, false, null);
+
 
         {% block onLoadScript %}
 
