--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -65,6 +65,7 @@
                                     <div class="md-form">
                                         <textarea type="text" id="message" name="texto" style="min-height: 100px"
                                                   class="md-textarea"
+                                                  aria-label="Mensaje"
                                                   placeholder="{% trans 'mensaje'|title %}"></textarea>
                                     </div>
 
