--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -23,6 +23,10 @@
             border: black solid 1px;
             cursor: pointer;
         }
+
+        .intro {
+            min-height: 800px;
+        }
     </style>
     {% include 'web/base/menu.html' with es_menu_index=True %}
 
