--- a/templates/web/base/contactenos.html
+++ b/templates/web/base/contactenos.html
@@ -72,7 +72,7 @@
                                 TRATAMIENTO DE DATOS PERSONALES</a>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div id="recaptcha_contactanos" class="col-12">
                         <div class="g-recaptcha"
                              data-sitekey="6Le3hHkUAAAAABDNyS-p8Y2mgf2PSf1oZmCEcKb0"></div>
                     </div>
