--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -6,6 +6,7 @@
 
 <head>
     <script defer type="text/javascript" src="{% static 'web/js/jquery-3.2.1.min.js' %}"></script>
+    <link rel="preconnect" href="https://odecopack-web.s3.amazonaws.com">
     <style>
         html {
             box-sizing: border-box;
