--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -3,7 +3,7 @@
 <div {% if es_menu_index == True %}class="index"{% endif %}>
     <nav class="navbar fixed-top navbar-expand-lg scrolling-navbar menu-odeco {% if es_menu_index == True %}navbar-toggleable-md{% endif %}">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img width="210px" data-src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
+            <img width="210px" data-src="{% static 'web/img/logo-odecopack2.png' %}" alt="Logo menu odecopack">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav {% if es_menu_index == True %} smooth-scroll {% endif %}">
                 <li class="nav-item right-border">
-                    <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#empresa"
+                    <a class="nav-link" href="{% if es_menu_index == False %}{% url 'index' %}{% endif %}#empresa_section"
                        data-offset="70">{% trans "EMPRESA" %} <span class="sr-only">(current)</span></a>
                 </li>
             </ul>
