--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -3,7 +3,7 @@
 {% get_solo 'web_configurations.CacheConfiguration' as cache_configuracion %}
 {% get_current_language as LANGUAGE_CODE %}
 <div class="container index">
-    <section id="empresa" class="section mt-3">
+    <section id="empresa_section" class="section mt-3">
         <h1 class="section-heading h1 pt-4 text-center text-sm-left">{{ empresa_configuracion.titulo|upper }}</h1>
         <div class="row index-empresa">
             {% if empresa_configuracion.video %}
@@ -19,7 +19,8 @@
             {% endif %}
             <div class="col-12 col-sm-6 m-0 p-0 {% if not empresa_configuracion.video %} m-auto {% endif %}">
                 <div class="contenido">
-                    <img class="img-fluid" data-src="{% static 'web/img/datos-empresa.png' %}" alt="">
+                    <img class="img-fluid" data-src="{% static 'web/img/datos-empresa.png' %}"
+                         alt="Imagen Datos Empresa">
                 </div>
             </div>
             <div class="col-12 col-md-7 col-lg-8 mt-3 mt-sm-0 dark-grey-text" style="margin: auto !important;">
@@ -32,7 +33,7 @@
             {% if empresa_configuracion.imagen_principal %}
                 <div class="col-12 col-md-5 col-lg-4 p-0 m-auto">
                     <figure>
-                        <img data-src="{{ empresa_configuracion.imagen_principal.url }}" alt="">
+                        <img data-src="{{ empresa_configuracion.imagen_principal.url }}" alt="Imagen de empresa">
                     </figure>
                 </div>
             {% endif %}
@@ -80,7 +81,7 @@
                                                                 <source type="image/webp"
                                                                         data-srcset="{{ galeria.imagen_thumbnail_webp.url }}">
                                                                 <img data-src="{{ galeria.imagen_thumbnail.url }}"
-                                                                     alt="">
+                                                                     alt="imagen principal {{ galeria.nombre }}">
                                                             </picture>
                                                         </figure>
                                                     </div>
@@ -97,7 +98,7 @@
                                                                                 <source type="image/webp"
                                                                                         data-srcset="{{ galeria.imagen_thumbnail_galeria_webp.url }}">
                                                                                 <img data-src="{{ galeria.imagen_thumbnail_galeria.url }}"
-                                                                                     alt="">
+                                                                                     alt="imagen principal {{ galeria.nombre }}">
                                                                             </picture>
                                                                         </div>
                                                                     </a>
@@ -131,6 +132,8 @@
                                                                                         <img data-src="{{ imagen.imagen_thumbnail.url }}"
                                                                                                 {% if imagen.alt_seo %}
                                                                                              alt="{{ imagen.alt_seo }}"
+                                                                                                {% else %}
+                                                                                             alt="Foto {{ imagen.id }} de galeria {{ galeria.nombre }}"
                                                                                                 {% endif %}
                                                                                         >
                                                                                     </picture>
