--- a/templates/web/base/footer.html
+++ b/templates/web/base/footer.html
@@ -1,5 +1,11 @@
 {% load solo_tags i18n %}
 {% get_solo 'web_configurations.GeneralConfiguration' as general_configuracion %}
+<style>
+    .footer-copyright {
+        color: #fff !important;
+    }
+
+</style>
 <footer class="page-footer color-4-odecopack center-on-small-only">
     {% get_current_language as LANGUAGE_CODE %}
     <div class="container" id="footer">
