--- a/static/web/css/OdecopackIcons.styl
+++ b/static/web/css/OdecopackIcons.styl
@@ -1,6 +1,6 @@
 //fontastic
 @font-face
-  font-display: auto;
+  font-display: swap;
   font-family "odecopack"
   src url("../fonts/odecopack.eot")
   src url("../fonts/odecopack.eot?#iefix") format("embedded-opentype"), url("../fonts/odecopack.woff") format("woff"), url("../fonts/odecopack.ttf") format("truetype"), url("../fonts/odecopack.svg#odecopack") format("svg")
